# weather-applet

./: Cargo.toml  README.md  cargo-sources.json  flatpak-build.md  flatpak-cargo-generator.py  generate-cargo-sources.sh  justfile  one.weird.nandi.weather-applet.json  one.weird.nandi.weather-applet.yml  sh.tangled.one.weird.nandi.weather-applet.yml
.github/workflows/: build.yml
data/: one.weird.nandi.weather-applet.desktop
src/: applet.rs  config.rs  geolocation.rs  lib.rs  main.rs  weather.rs
